--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "lint": "eslint --quiet .",
     "fix": "eslint --fix .",
-    "test": "npm run lint && cross-env NODE_ENV=test mocha -u tdd --reporter spec --exit"
+    "test": "npm run lint && cross-env NODE_ENV=test mocha -u tdd --reporter spec --exit",
+    "watch": "nodemon server.js"
   },
   "license": "ISC",
   "dependencies": {
@@ -18,6 +19,7 @@
     "express-handlebars": "^3.0.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.41.2",
+    "tailwindcss": "^0.7.4",
     "webhoseio": "^1.0.2"
   },
   "devDependencies": {
