--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,20 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "exampledb",
-    "host": "localhost",
-    "dialect": "mysql"
+    "use_env_local": "MYSQL_URI",
+    "operatorsAliases": "Op"
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "testdb",
+    "username": "process.env.DB_USER",
+    "password": "process.env.DB_PASS",
+    "database": "process.env.DB",
     "host": "localhost",
     "dialect": "mysql",
-    "logging": false
+    "logging": false,
+    "operatorsAliases": "Op"
   },
   "production": {
     "use_env_variable": "JAWSDB_URL",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "operatorsAliases": "Op"
   }
 }
