--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,11 @@
 {
   "development": {
-    "use_env_local": "MYSQL_URI",
-    "operatorsAliases": "Op"
+    "use_env_local": "MYSQL_URI"
   },
   "test": {
-    "username": "process.env.DB_USER",
-    "password": "process.env.DB_PASS",
-    "database": "process.env.DB",
-    "host": "localhost",
-    "dialect": "mysql",
-    "logging": false,
-    "operatorsAliases": "Op"
+    "use_env_testing": "MYSQL_URI"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
-    "dialect": "mysql",
-    "operatorsAliases": "Op"
+    "use_env_variable": "JAWSDB_URL"
   }
 }
