--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mysql2": "^1.6.4",
     "sequelize": "^4.41.2",
     "tailwindcss": "^0.7.4",
-    "webhoseio": "^1.0.2"
+    "webhoseio": "^1.0.2",
+    "yelp-fusion": "^3.0.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
