--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mapbox-gl": "^0.54.0",
     "moment": "^2.24.0",
     "mysql2": "^1.6.4",
     "sequelize": "^4.41.2",
-    "tailwindcss": "^0.7.4",
     "webhoseio": "^1.0.2",
     "yelp-fusion": "^3.0.0"
   },
@@ -32,7 +32,8 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "tailwindcss": "^0.7.4"
   },
   "directories": {
     "test": "test"
