--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,11 @@
 {
   "development": {
-    "use_env_local": "MYSQL_URI"
+    "use_env_dev": "MYSQL_URI"
   },
-  "test": {
-    "use_env_testing": "MYSQL_URI"
+  "testing": {
+    "use_env_test": "MYSQL_URI"
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL"
+    "use_env_prod": "JAWSDB_URL"
   }
 }
