--- a/package.json
+++ b/package.json
@@ -13,27 +13,26 @@
   },
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "dotenv": "^6.0.0",
-    "express": "^4.16.3",
-    "express-handlebars": "^3.0.0",
-    "mapbox-gl": "^0.54.0",
+    "body-parser": "^1.19.0",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "mapbox-gl": "^1.2.0",
     "moment": "^2.24.0",
-    "mysql2": "^1.6.4",
-    "sequelize": "^4.41.2",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.12.2",
     "webhoseio": "^1.0.2",
     "yelp-fusion": "^3.0.0"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "cross-env": "^5.2.0",
-    "eslint": "^4.19.1",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.2",
-    "mocha": "^5.2.0",
-    "morgan": "^1.9.1",
-    "tailwindcss": "^0.7.4"
+    "eslint-plugin-prettier": "^3.1.0",
+    "mocha": "^6.2.0",
+    "morgan": "^1.9.1"
   },
   "directories": {
     "test": "test"
